<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonOverlayPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_draw_over"
        app:layout_constraintTop_toBottomOf="@id/textStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/buttonAccessibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_accessibility"
        app:layout_constraintTop_toBottomOf="@id/buttonOverlayPermission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonStartService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_floating_service"
        app:layout_constraintTop_toBottomOf="@id/buttonAccessibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/buttonFavorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_favorites"
        app:layout_constraintTop_toBottomOf="@id/buttonStartService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_settings"
        app:layout_constraintTop_toBottomOf="@id/buttonFavorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


